<resources>
    <string name="app_name">AppTask</string>

    <string name="click_me">Click Me</string>
    <string name="zero">0</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="home">Home</string>
    <string name="task">Task</string>
    <string name="user">User</string>
    <string name="likes">Likes !</string>
    <string name="clicks">Visits !</string>
    <string name="settings_text_select_theme">Select Name:</string>
    <string name="settings_text_credentials">Create Task</string>
    <string name="description_hint">Description</string>
    <string name="title_task_hint">Task title</string>
    <string name="date_task_hint">Date</string>
    <string name="settings_text_clear_data">save</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_task">Create Task</string>
    <string name="todo">TODO</string>

</resources>
