<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CreateTaskFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:gravity="center"
        android:text="@string/create_task"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/tex_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvSelectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/settings_text_select_theme"
        app:layout_constraintEnd_toStartOf="@+id/spName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSelectName"
        android:layout_alignParentRight="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_toRightOf="@+id/tvSelectName"
        android:entries="@array/theme_array"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RelativeLayout
        android:id="@+id/rlTask"
        android:layout_width="389dp"
        android:layout_height="235dp"
        android:layout_below="@+id/tvSelectName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spName"
        app:layout_constraintVertical_bias="0.133">


        <EditText
            android:id="@+id/tvTitle_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/title_task_hint"
            android:inputType="text"
            android:lines="1" />


        <EditText
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle_task"
            android:clickable="true"
            android:hint="@string/description_hint"
            android:lines="1" />

        <EditText
            android:id="@+id/tvPlannedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDescription"
            android:clickable="true"
            android:hint="@string/date_task_hint"
            android:lines="1" />

        <Button
            android:id="@+id/btnClearData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPlannedDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="143dp"
            android:layout_marginLeft="143dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp"
            android:text="@string/settings_text_clear_data" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>